test added to try solve flip not working on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,8 @@ i {
 
 .memory-card.flip {
      transform: rotateY(180deg);
+     -webkit-transform: rotateY(180deg);
+     -webkit-transform:rotateX(0deg);
 }
 
 
